--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "cov:lcov": "nyc report --reporter=lcov",
     "cov:check": "nyc report && nyc check-coverage --lines 100 --functions 100 --branches 100",
     "doc": "run-s doc:html",
-    "doc:html": "typedoc src/ --exclude **/*.spec.ts --target ES6 --mode file --out build/docs",
-    "doc:json": "typedoc src/ --exclude **/*.spec.ts --target ES6 --mode file --json build/docs/typedoc.json",
+    "doc:html": "typedoc src/ --exclude **/*.spec.ts --out build/docs",
+    "doc:json": "typedoc src/ --exclude **/*.spec.ts --json build/docs/typedoc.json",
     "doc:publish": "gh-pages -m \"[ci skip] Updates\" -d build/docs",
     "reset-hard": "git clean -dfx && git reset --hard && npm i",
     "prepare-release": "run-s reset-hard test cov:check doc:html version doc:publish",
@@ -67,7 +67,7 @@
     "prettier": "^2.1.1",
     "ts-node": "^9.0.0",
     "ts-sinon": "^2.0.1",
-    "typedoc": "^0.19.0",
+    "typedoc": "^0.22.13",
     "typescript": "^4.0.2"
   },
   "files": [
